tests/paczka2/big_fuzzy/10839567.err
Error in line 3: CJF7ATDn A681 25,3
Error in line 7: CJF7ATDn S664 43,2
Error in line 20: qmaVPiW S499 58,9
Error in line 17: MDZO26 S478 95,2
Error in line 14: McMMevKQt S499 108,4
Error in line 38: McMMevKQt S664 -1,3
Error in line 31: McMMevKQt S664 18,1
Error in line 11: F64ybYySoh S499 116,4
Error in line 41: qmaVPiW S478 39,1
Error in line 48: F64ybYySoh A681 -3,0
Error in line 45: F64ybYySoh A681 49,8
Error in line 62: qmaVPiW S664 36,3
Error in line 65: qmaVPiW S478 11,8
Error in line 44: ob6nqyExM A681 76,7
Error in line 84: CJF7ATDn S499 57,6
Error in line 80: MDZO26 S664 15,1
Error in line 94: MDZO26 S478 74,00
Error in line 98: qmaVPiW S664 74,3
Error in line 109: qmaVPiW S478 26,5
Error in line 100: MDZO26 S478 278,2
Error in line 104: F64ybYySoh S499 37,4
Error in line 103: ob6nqyExM S478 46,6
Error in line 118: qmaVPiW S478 18,3
Error in line 128: qmaVPiW S664 28,5
Error in line 78: McMMevKQt S664 56,5
Error in line 150: ob6nqyExM A681 59,8
Error in line 152: ob6nqyExM S664 59,2
Error in line 144: MDZO26 S499 37,4
Error in line 162: CJF7ATDn S478 29,36
Error in line 156: MDZO26 A681 93,0
Error in line 168: MDZO26 S664 65,5
Error in line 170: S664 S478 8,3
Error in line 183: ob6nqyExM S499 26,5
Error in line 187: F64ybYySoh A681 92,6
Error in line 188: F64ybYySoh S499 93,1
Error in line 176: CJF7ATDn S478 119,3
Error in line 193: CJF7ATDn S499 56,0
Error in line 190: McMMevKQt S664 52,7
Error in line 199: McMMevKQt A681 32,1
Error in line 198: MDZO26 S478 93,7
Error in line 171: qmaVPiW S499 60,4
Error in line 219: MDZO26 A681 -3,4
Error in line 202: MDZO26 A681 64,6
Error in line 216: S664 S499 21,9
